--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                 </div>
                 <div class="contract-address animate-fade-in">
                     <div class="contract-text">
-                        <strong>CA:</strong> COMING SOON
+                        <strong>CA:</strong> ABLwgBAjivyWzt9NWQPUa3xTrFtGVn9qRUsBiYVGpump
                     </div>
                     <button class="copy-btn" onclick="copyContract()">Copy</button>
                 </div>
