--- a/index.html
+++ b/index.html
@@ -1040,14 +1040,12 @@
 
         // Join Twitter Function
         function joinTwitter() {
-            showModal("🐦 Follow Us on Twitter", 
-                "Stay updated with the latest from Pump.fun University!<br><br>" +
-                "<em>Twitter link would go here in a real implementation</em>");
+            window.open('https://x.com/pumparumveritas', '_blank');
         }
 
         // Copy Contract Address Function
         function copyContract() {
-            const contractText = "COMING SOON";
+            const contractText = "ABLwgBAjivyWzt9NWQPUa3xTrFtGVn9qRUsBiYVGpump";
             
             // Try to copy to clipboard
             if (navigator.clipboard && window.isSecureContext) {
